[package]
name = "ili9431_esp32s3_test"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { package = "esp-hal", version = "0.19.0", features = [
    "esp32s3",
    "embedded-hal-02",
    "log",
] }
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
mipidsi = "0.7.1"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "0.3.5", default-features = false }
embedded-dma = "0.2.0"
critical-section = "1.1.2"
num-traits = { version = "0.2.17", default-features = false }
fugit = "0.3.7"
static_cell = { version = "2.1.0", features = ["nightly"] }

[features]
fps = []
