[package]
name = "ili9431_esp32s3_test"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { package = "esp-hal", version = "0.20.1", features = [
    "esp32s3",
    "log",
] }
esp-backtrace = { version = "0.14.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.11.0", features = ["esp32s3", "log"] }
mipidsi = "0.7.1"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "0.3.5", default-features = false }
embedded-dma = "0.2.0"
critical-section = "1.1.2"
num-traits = { version = "0.2.17", default-features = false }
fugit = "0.3.7"
static_cell = { version = "2.1.0", features = ["nightly"] }

[features]
fps = []

[patch.crates-io]
# working
esp-hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal",   rev = "a5ab73959e28d117744c60ac383f45c20c65a400"}

# non working
# esp-hal = { git = "https://github.com/esp-rs/esp-hal", package = "esp-hal",   rev = "f11c18a6b93eb54e02494fa4df2a2941dcd5b44f"}