[package]
name = "ili9431_esp32s3_test"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { package = "esp-hal", version = "0.21.1", features = [
    "esp32s3",
    "log",
] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
mipidsi = "0.8.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.2", default-features = false }
embedded-dma = "0.2.0"
critical-section = "1.1.2"
num-traits = { version = "0.2.19", default-features = false }
fugit = "0.3.7"
static_cell = { version = "2.1.0", features = ["nightly"] }

[features]
fps = []

[patch.crates-io]
#esp-hal = { path = "/projects/upstream/esp-hal/esp-hal" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev="2472e362322c95f6ffa451ff80b6c1867c1cfdf4"}
